3-security-context/demo/03-deployment-run-as-user-unprivileged.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: run-as-user-unprivileged
  name: run-as-user-unprivileged
spec:
  selector:
    matchLabels:
      run: run-as-user-unprivileged
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: run-as-user-unprivileged
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:1.19.3
        name: run-as-user-unprivileged
        securityContext:
          runAsUser: 100000
          runAsGroup: 100000
