3-security-context/demo/11-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  serviceName: stateful
  selector:
    matchLabels:
      run: stateful
  template:
    metadata:
      labels:
        run: stateful
    spec:
      containers:
        - image: nginx:1.15.8
          name: stateful
          securityContext: {}
