3-security-context/demo/05a-netpol-egress-docker-sudo-allow-internal-only.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-nginx-allow-internal-only
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: docker-sudo
  egress:
    - to:
        - namespaceSelector: {}
